arete-macros/tests/ui/validation_errors/invalid_idl_literal.rs
use arete_macros::arete;

#[arete(idl = true)]
mod broken {}

fn main() {}
